fix `.header-btn` padding on small screens

--- a/app/styles/sections/_header.scss
+++ b/app/styles/sections/_header.scss
@@ -220,9 +220,11 @@
     z-index: $z-index-topbar + 1;
   }
 
-  .btn-dropdown {
-    .header-btn {
-      padding-right: _get-space('h');
+  @include breakpoint(l) {
+    .btn-dropdown {
+      .header-btn {
+        padding-right: _get-space('h');
+      }
     }
   }
 
